--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "scripts": {
     "build:pug": "ts-node build.ts",
-    "build:tsc": "tsc",
-    "build": "npm run build:pug",
-    "postbuild": "cp src/styles out -r; cp assets/exercises out/ -r"
+    "build:tsc": "(cd src/scripts && tsc)",
+    "tsc:watch": "(cd src/scripts && tsc -w)",
+    "build": "npm run build:pug; npm run build:tsc",
+    "postbuild": "cp src/styles out -r",
+    "clean": "rm -rf out"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/pug": "^2.0.4",
     "pug": "^3.0.0",
     "ts-node": "^9.0.0",
-    "tsc": "^1.20150623.0"
+    "typescript": "^4.1.2"
   }
 }
